# zcore

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  test_input.txt
.github/workflows/: build.yml
CLI/: ArgumentParser.cpp  ArgumentParser.hpp
Core/: CompressionEngine.cpp  CompressionEngine.hpp  HuffmanCompressor.cpp  HuffmanCompressor.hpp  LZ77Compressor.cpp  LZ77Compressor.hpp
IO/: BitBuffer.cpp  BitBuffer.hpp  FileHandler.cpp  FileHandler.hpp
Utils/: CompressionException.hpp  Logger.cpp  Logger.hpp
include/core/: Compressor.hpp  Deflate.hpp  Gzip.hpp  Huffman.hpp  Lz77.hpp
src/: Deflate.cpp  Gzip.cpp  Huffman.cpp  Lz77.cpp  main.cpp
src/core/: Deflate.cpp  Gzip.cpp  Huffman.cpp  Lz77.cpp
tests/: test_compression.cpp
